--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "build:css": "tailwind build src/style.css -o public/style.css"
+    "build:css": "tailwind build src/styles/style.css -o public/style.css"
   },
   "author": "Equipo 3",
   "license": "ISC",
