--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "Equipo 3",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "loadsh": "0.0.4",
     "mongoose": "^5.10.7",
     "tailwindcss": "^1.8.10"
